# fx-options-ukraine-war

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  walkthrough.ipynb
data/: timeline.csv
data/interim/: sabr-estimated-parameters.csv
data/processed/: data-example.csv
data/raw/: timeline.csv
notebooks/: 1-process-data.ipynb  2-methodology.ipynb  3-results.ipynb
output/estimates/: mfiv-nonparam.csv  prob-nonparam.csv  probability.csv
src/: datafeed.py  datafeed_.py  recipes.py  setup.py  visuals.py
src/datafeed/: downstream.py  upstream.py
src/datafeed_/: downstream.py  upstream.py
